--- a/app/templates/product-detail.html
+++ b/app/templates/product-detail.html
@@ -21,7 +21,7 @@
                         <div class="container">
                             <div class="row">
                                 <div class="col-sm-6">
-                                    <h4>{{Product.detail.name}}..{{Product.detail.galleryImages.length}}</h4>
+                                    <h4>{{Product.detail.name}}..</h4>
                                     <br>
                                     <h2 class="article-price">{{ Product.detail.price | currency}}</h2>
                                     <span ng-if="Product.detail.inventory <= 0 && Product.detail.kind === 'product'" style="font-size: 13px;"> Producto agotado</span>
