added validation for cancelled orders with paypal

--- a/app/templates/auth/purchase-detail.html
+++ b/app/templates/auth/purchase-detail.html
@@ -42,7 +42,7 @@
                                 </div>
                                 <div ng-Hide="!Purchase.isPaypal" class="col-4 col-md-6 text-right">
                                     <h6>
-                                        <span>
+                                        <span>Pagar con Paypal
                                             <a title="Pagar con paypal" href="{{Purchase.PaypalUrl}}" target="_" class="btn btn-sm btn-transparent">
                                                 <img src="../../img/paypall.png" alt=""  width="100">
                                             </a>
