added label fot payment status in dashboard

--- a/app/templates/auth/dashboard.html
+++ b/app/templates/auth/dashboard.html
@@ -88,7 +88,25 @@
                                                 {{ purchase.isPaidName }}
                                             </span>
                                             <span ng-if="purchase.isPaid == 2" class="badge badge-danger">
-                                                {{ purchase.isPaidName}}
+                                                {{ purchase.isPaidName }}
+                                            </span>
+                                            <span ng-if="purchase.isPaid == 3" class="badge badge-success">
+                                                {{ purchase.isPaidName }}
+                                            </span>
+                                            <span ng-if="purchase.isPaid == 4" class="badge badge-primary">
+                                                {{ purchase.isPaidName }}
+                                            </span>
+                                            <span ng-if="purchase.isPaid == 5" class="badge badge-info">
+                                                {{ purchase.isPaidName }}
+                                            </span>
+                                            <span ng-if="purchase.isPaid == 6" class="badge badge-success">
+                                                {{ purchase.isPaidName }}
+                                            </span>
+                                            <span ng-if="purchase.isPaid == 7" class="badge badge-warning">
+                                                {{ purchase.isPaidName }}
+                                            </span>
+                                            <span ng-if="purchase.isPaid == 8" class="badge badge-info">
+                                                {{ purchase.isPaidName }}
                                             </span>
                                         </td>
                                         <td data-title="'Compra'">
