--- a/app/templates/auth/address-new.html
+++ b/app/templates/auth/address-new.html
@@ -67,7 +67,7 @@
                                             </md-select>
                                         </md-input-container>
                                     </div>
-                                    <div class="col-xs-12 col-sm-6" ng-if="!Address.editCityForm">
+                                    <div class="col-xs-12 col-sm-6" ng-if="!Address.create">
                                         <label ng-if="!Address.editCityForm">Ciudad</label>
                                         <p ng-if="!Address.editCityForm">{{Address.formData.cityName}} <i
                                                 class="ion-compose"
